WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30986
Fix layering violations in GraphicsContext3D
https://bugs.webkit.org/show_bug.cgi?id=30986
Summary
Fix layering violations in GraphicsContext3D
Oliver Hunt
Reported
2009-10-31 20:36:42 PDT
There are multiple uses of DOM objects in the GraphicsContext3D object which are a significant layering violation. These need to be fixed.
Attachments
Remove canvas and image element uses from CanvasRenderingContext3D
(9.70 KB, patch)
2009-10-31 21:36 PDT
,
Oliver Hunt
no flags
Details
Formatted Diff
Diff
Remove canvas and image element uses from CanvasRenderingContext3D
(9.73 KB, patch)
2009-10-31 21:37 PDT
,
Oliver Hunt
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2009-10-31 21:36:00 PDT
Created
attachment 42266
[details]
Remove canvas and image element uses from CanvasRenderingContext3D
Oliver Hunt
Comment 2
2009-10-31 21:37:55 PDT
Created
attachment 42267
[details]
Remove canvas and image element uses from CanvasRenderingContext3D
Darin Adler
Comment 3
2009-11-01 13:18:17 PST
Comment on
attachment 42267
[details]
Remove canvas and image element uses from CanvasRenderingContext3D
> + CachedImage* cachedImage = image->cachedImage(); > + if (!cachedImage) > + return; > + m_context->texSubImage2D(target, level, xoffset, yoffset, width, height, cachedImage->image(), flipY, premultiplyAlpha); > cleanupAfterGraphicsCall(false);
All the other cases you put a blank line after the early return. r=me
Oliver Hunt
Comment 4
2009-11-01 18:10:36 PST
Committed
r50394
Ahmad Saleem
Comment 5
2023-06-13 14:05:41 PDT
https://github.com/WebKit/WebKit/commit/966e02e441e1039e708cb9bb54e6c4c11cd7badd
and checking by bug number and commit id ‘50394' seems to indicate that it was not backed out. Marking ‘RESOLVED FIXED’.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug