Fix layering violations in GraphicsContext3D https://bugs.webkit.org/show_bug.cgi?id=30986

Reviewed by Darin Adler.

Remove uses of HTMLImageElement and HTMLCanvasElement

Canonical link: https://commits.webkit.org/41827@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50394 268f45cc-cd09-0410-ab3c-d52691b4dbfc