WebCore/html/canvas/CanvasRenderingContext3D.cpp
@@ -37,6 +37,8 @@
 #include "CanvasTexture.h"
 #include "CanvasShader.h"
 #include "HTMLCanvasElement.h"
+#include "HTMLImageElement.h"
+#include "ImageBuffer.h"
 #include "RenderBox.h"
 #include "RenderLayer.h"
 
@@ -1005,18 +1007,36 @@ void CanvasRenderingContext3D::texImage2D(unsigned target, unsigned level, unsig
 void CanvasRenderingContext3D::texImage2D(unsigned target, unsigned level, HTMLImageElement* image,
                                           bool flipY, bool premultiplyAlpha, ExceptionCode& ec)
 {
-    // FIXME: For now we ignore any errors returned
     ec = 0;
-    m_context->texImage2D(target, level, image, flipY, premultiplyAlpha);
+    if (!image) {
+        ec = TYPE_MISMATCH_ERR;
+        return;
+    }
+
+    CachedImage* cachedImage = image->cachedImage();
+    if (!cachedImage)
+        return;
+
+    // FIXME: For now we ignore any errors returned
+    m_context->texImage2D(target, level, cachedImage->image(), flipY, premultiplyAlpha);
     cleanupAfterGraphicsCall(false);
 }
 
 void CanvasRenderingContext3D::texImage2D(unsigned target, unsigned level, HTMLCanvasElement* canvas,
                                           bool flipY, bool premultiplyAlpha, ExceptionCode& ec)
 {
-    // FIXME: For now we ignore any errors returned
     ec = 0;
-    m_context->texImage2D(target, level, canvas, flipY, premultiplyAlpha);
+    if (!canvas) {
+        ec = TYPE_MISMATCH_ERR;
+        return;
+    }
+
+    ImageBuffer* buffer = canvas->buffer();
+    if (!buffer)
+        return;
+
+    // FIXME: For now we ignore any errors returned
+    m_context->texImage2D(target, level, buffer->image(), flipY, premultiplyAlpha);
     cleanupAfterGraphicsCall(false);
 }
 
@@ -1067,7 +1087,16 @@ void CanvasRenderingContext3D::texSubImage2D(unsigned target, unsigned level, un
 {
     // FIXME: For now we ignore any errors returned
     ec = 0;
-    m_context->texSubImage2D(target, level, xoffset, yoffset, width, height, image, flipY, premultiplyAlpha);
+    if (!image) {
+        ec = TYPE_MISMATCH_ERR;
+        return;
+    }
+    
+    CachedImage* cachedImage = image->cachedImage();
+    if (!cachedImage)
+        return;
+
+    m_context->texSubImage2D(target, level, xoffset, yoffset, width, height, cachedImage->image(), flipY, premultiplyAlpha);
     cleanupAfterGraphicsCall(false);
 }
 
@@ -1075,9 +1104,18 @@ void CanvasRenderingContext3D::texSubImage2D(unsigned target, unsigned level, un
                                              unsigned width, unsigned height, HTMLCanvasElement* canvas,
                                              bool flipY, bool premultiplyAlpha, ExceptionCode& ec)
 {
-    // FIXME: For now we ignore any errors returned
     ec = 0;
-    m_context->texSubImage2D(target, level, xoffset, yoffset, width, height, canvas, flipY, premultiplyAlpha);
+    if (!canvas) {
+        ec = TYPE_MISMATCH_ERR;
+        return;
+    }
+    
+    ImageBuffer* buffer = canvas->buffer();
+    if (!buffer)
+        return;
+    
+    // FIXME: For now we ignore any errors returned
+    m_context->texSubImage2D(target, level, xoffset, yoffset, width, height, buffer->image(), flipY, premultiplyAlpha);
     cleanupAfterGraphicsCall(false);
 }
 
